--- a/my-threejs-app/src/app/styles/style.css
+++ b/my-threejs-app/src/app/styles/style.css
@@ -1,10 +1,15 @@
-body {
-    background: #111;
-    background-size: cover;
-}
+
 .homeMain {
     font-family: Arial, Helvetica, sans-serif;
 }
 .homeMain h1 {
     text-transform: uppercase;
+}
+.swiper {
+    width: 100%;
+    height: 100%;   
+}
+.swiper-slide img{
+    max-width: 100%;
+    object-fit: cover;
 }
